--- a/users/templates/users/payment.html
+++ b/users/templates/users/payment.html
@@ -18,6 +18,7 @@
       </div>
       <input type="hidden" name="payment_method_id" id="payment-method-id">
       <button type="submit" class="px-6 py-2 rounded-full font-semibold text-white w-full" style="background-color: #FF9950;">Submit Payment</button>
+      <button type="submit" class="get-started-btn px-6 py-2 rounded-full font-semibold text-white w-full">Submit Payment</button>
       <div id="card-errors" class="mt-2 text-red-500 text-sm"></div>
     </form>
     <div class="mt-4 text-sm text-[#555B6E] text-center">Your payment is securely processed. You will be redirected to your dashboard after successful payment.</div>
