--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -38,7 +38,7 @@
         </div>
       </div>
     </div>
-    <div class="w-screen relative left-1/2 right-1/2 -ml-[50vw] -mr-[50vw] flex flex-col gap-12 py-8 px-0" style="background-color: #FFE5D1;">
+    <div class="w-screen relative left-1/2 right-1/2 -ml-[50vw] -mr-[50vw] flex flex-col gap-12 py-8 px-0" style="background-color: #FFF6ED;">
       {% for post in page_obj %}
       <a href="{% url 'blog_detail' slug=post.slug %}" class="block rounded-2xl shadow-lg p-10 sm:p-14 mx-auto transition-transform hover:-translate-y-1 hover:shadow-xl" style="background-color: #FAF9F9; color: #555B6E; width: 75%; min-width: 280px; max-width: 900px;">
         {% if post.image %}
