--- a/templates/partials/carousel_section.html
+++ b/templates/partials/carousel_section.html
@@ -1,5 +1,6 @@
-<section class="py-8 w-full px-0 sm:px-0" style="background-color: #FFE5D1;">
+<section class="py-8 w-full px-0 sm:px-0" style="background-color: #FFF6ED;">
   <div class="w-full flex flex-col items-center justify-center">
+    <h2 class="text-2xl sm:text-3xl font-bold mb-8 text-center w-full" style="color: #555B6E;">Featured Therapist &amp; Blog Post</h2>
     <div class="w-full max-w-7xl flex flex-col sm:flex-row gap-8 py-8 sm:py-10 rounded-xl shadow-lg mx-auto items-start justify-center bg-white">
       {% include "partials/carousel_slides.html" %}
     </div>
